# Media-Player-Scrobbler-for-Simkl

./: .env  .env.example  .gitignore  404.html  CONTRIBUTING.md  MANIFEST.in  README.md  build_installer.bat  bump_version.bat  create_icns.py  get_version.py  index.html  main.py  master_test.py  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  run.py  setup.iss  setup.py  simkl-mps.spec  sitemap.xml  tag_manager.py  test_build.py  test_dependencies.py  test_integration.py  test_movie_completion.py  test_offline_tracking.py  test_real_playback.py  test_vlc_playback.py  tray_app.py  update_wiki.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  changelog-config.json  codeql-config.yml  dependabot.yml  labeler.yml  release.yml  typos_config.toml
configuration/: index.html
development/: index.html
docs/: configuration.md  development.md  index.md  installation.md  linux-guide.md  mac-guide.md  media-players.md  quick-start.md  todo.md  troubleshooting.md  usage.md  verify.md  watch-history.md  windows-guide.md
installation/: index.html
linux-guide/: index.html
mac-guide/: index.html
media-players/: index.html
quick-start/: index.html
search/: search_index.json
simkl_movie_tracker/: media_cache.json  media_tracker.py  playback_log.jsonl  simkl_api.py
simkl_mps/: __init__.py  backlog_cleaner.py  cli.py  config_manager.py  credentials.py  main.py  media_cache.py  media_scrobbler.py  media_tracker.py  monitor.py  movie_scrobbler.py  service_manager.py  service_runner.py  simkl_api.py  tray_app.py  tray_base.py  tray_linux.py  tray_mac.py  (+3 more)
(+54 files in other folders)
