[tool.poetry]
name = "simkl-scrobbler"
version = "1.2.0"
description = "Automatic Movie Scrobbler for Simkl"
authors = ["kavinthangavel <kavinthangavel.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["simkl", "scrobbler"]
homepage = "https://github.com/kavinthangavel/simkl-scrobbler"
repository = "https://github.com/kavinthangavel/simkl-scrobbler"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System ::  OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
packages = [{include = "simkl_scrobbler"}]

[tool.poetry.dependencies]
python = ">=3.7"
requests = ">=2.25.0"
guessit = ">=3.3.0"
python-dotenv = ">=0.15.0"
psutil = ">=5.8.0"
colorama = ">=0.4.4"
# Platform-specific dependencies
pygetwindow = { version = ">=0.0.9", markers = "sys_platform == 'win32'" }
pywin32 = { version = ">=300", markers = "sys_platform == 'win32'" }
# Optional macOS and Linux dependencies (will be installed if available)    
python-xlib = { version = ">=0.31", optional = true, markers = "sys_platform == 'linux'" }


[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
flake8 = "^5.0" # Use v5 for Python 3.7 compatibility

[tool.poetry.scripts]
simkl-scrobbler = "simkl_scrobbler.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
linux = ["python-xlib"]